--- a/Project_YelpCamp/package.json
+++ b/Project_YelpCamp/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Colt Steele",
   "license": "ISC",
+  "engines" : {
+    "node" : "6.0.0",
+    "npm" : "3.8.6"
+  }
   "dependencies": {
     "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
