--- a/Project_YelpCamp/package.json
+++ b/Project_YelpCamp/package.json
@@ -1,17 +1,17 @@
 {
   "name": "v1",
   "version": "1.0.0",
-  "description": "YelpCamp v1",
+  "description": "YelpCamp",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "Colt Steele",
+  "author": "Piyali Dey",
   "license": "ISC",
-  "engines" : {
-    "node" : "6.0.0",
-    "npm" : "3.8.6"
+  "engines": {
+    "node": "6.0.0",
+    "npm": "3.8.6"
   },
   "dependencies": {
     "body-parser": "^1.14.1",
@@ -24,5 +24,6 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
-  }
+  },
+  "devDependencies": {}
 }
